modified:   index.html 	new file:   js/gsap.min.js 	new file:   js/gsap.min.js.map 	new file:   js/header.js 	modified:   style.css 	modified:   style.css.map 	modified:   style.scss

--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
                 <span></span>
                 <span></span>
             </button>
+            <div class="header__screen">
+                <div class="header__contacts">
+                    <p>Контакты</p>
+                    <p>+7 (911) 000 00 00<br>mehanikenn@bk.ru</p>
+                    <p>192289, Санкт-Петербург, Софийская ул., дом №95</p>
+                </div>
+            </div>
+            
         </header>
-        <script src="" async defer></script>
+        <script src="js/gsap.min.js"></script>
+        <script src="js/header.js" async defer></script>
     </body>
 </html>
